Convert rewrite-gradle to java/RewriteTest