@@ -1,5 +1,5 @@
 /*
- * Copyright 2022 the original author or authors.
+ * Copyright 2021 the original author or authors.
  * <p>
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -13,30 +13,32 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-package org.openrewrite.gradle;
+package org.openrewrite.gradle.tree;
 
 import org.junit.jupiter.api.Test;
 import org.openrewrite.test.RewriteTest;
 
-import static org.openrewrite.gradle.Assertions.settingsGradle;
+import static org.openrewrite.gradle.Assertions.buildGradle;
 
-public class GradleParserTest implements RewriteTest {
+class TestTest implements RewriteTest {
 
     @Test
-    void buildGradleAndSettingsGradle() {
+    void testDsl() {
         rewriteRun(
-          settingsGradle(
+          buildGradle(
             """
-              plugins {
-                  id 'com.gradle.enterprise' version '3.11.3'
-              }
-                                          
-              gradleEnterprise {
-                  server = 'https://enterprise-samples.gradle.com'
-                                          
-                  buildScan {
-                      publishAlways()
-                  }
+              test {
+                 useJUnit()
+                 useTestNG()
+                 useJUnitPlatform()
+                 systemProperty 'some.prop', 'value'
+                 include 'org/foo/**'
+                 exclude 'org/boo/**'
+                 testLogging.showStandardStreams = true
+                 minHeapSize = "128m"
+                 maxHeapSize = "512m"
+                 jvmArgs '-XX:MaxPermSize=256m'
+                 failFast = true
               }
               """
           )
